--- a/templates/new_question_comment.html
+++ b/templates/new_question_comment.html
@@ -34,7 +34,8 @@
 </head>
 <body>
     <h1>Write a comment for the question</h1>
-        <form action="/question/{{ question_id }}/new_comment" method="POST">
+                <form method="POST" action="{{ url_for('new_question_comment', question_id=question_id) }}">
+
             <label>Comment: <br> <textarea name="new_comment"></textarea></label><br>
             <input type="submit" value="Send!">
         </form>
