--- a/templates/edit_answer.html
+++ b/templates/edit_answer.html
@@ -38,13 +38,15 @@
 </head>
 <body>
     <h1>Edit answer</h1><br><br>
-    <form action="{{ url_for("edit_answer", answer_id=answer_id, question_id=question_id) }}" method="POST">
+    <form action="{{ url_for("edit_answer", answer_id=answer_id, question_id=question_id) }}" method="POST" enctype="multipart/form-data">
         {% for answer in answers %}
             <p>
                 <textarea name="message" cols="30" rows="10" required>{{ answer["message"] }}</textarea>
             </p>
         {% endfor %}
         <br>
+        <label for="input-id">Upload a picture:</label><br><br>
+        <input id="input-id" type="file" name="photo" class="file form-control" multiple data-preview-file-type="text" data-allowed-file-extensions='["png", "jpg"]'><br><br>    
         <button type="submit">Edit</button>
     </form>
 </body>
