--- a/templates/list.html
+++ b/templates/list.html
@@ -58,7 +58,7 @@
 </head>
 <body>
 <h1>Askm8</h1><br>
-
+<p align="right"><a href="{{ url_for('askm8') }}">About this project</a></p>
 <table>
     <tr>
         <th>
