Polishing some minor typo, before demo

--- a/templates/projectinfo.html
+++ b/templates/projectinfo.html
@@ -185,7 +185,7 @@
             We overcame these obstacles with teamwork,<br>
             Massive amount of mentor help (thanks a lot! :) btw)<br>
             Documentation diving, Stackoverflow <br>
-            And of course youtube channels from India.</p>
+            And of course watching youtube channels from India.</p>
             <img src="static/psycopg2error.png" alt="psycopg2 error" height="100px">
             </div>
             </div>
@@ -202,10 +202,11 @@
             Time, effort and agile tools</h2>
       <p align="center">#     #     #</p>
         <p align="justify">
-        Thanks for stopping by! We love to do demos for you!<br>
-            Let's try <span class="bigger"><a href="/">Askm8</a></span>, our best thing ...yet.</p>
+        Thanks for stopping by! <br> We love to do demos for you!<br>
+            Let's try <span class="bigger"><a href="/">Askm8</a></span>, our project.</p>
       <img src="https://i.kym-cdn.com/photos/images/newsfeed/000/538/716/7f5.gif" alt="thumbs up gif" align="center" height="200">
    </div>
 </div>
+<a href="/">Back to main page</a><br>
 </body>
 </html>
