implement login feature started

--- a/templates/list.html
+++ b/templates/list.html
@@ -59,6 +59,8 @@
 <body>
 <h1>Askm8</h1><br>
 <p align="right"><a href="{{ url_for('askm8') }}">About this project</a></p>
+<p><a href="{{ url_for('login') }}">LOGIN</a></p>
+
 <table>
     <tr>
         <th>
