--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -60,12 +60,14 @@
         <td>{{ question['title'] }}</td>
         <td>{{ question['message'] }}</td>
     </tr>
+</table>
     <br>
+    <p>Tags: </p>
     {% for tag in question_tags %}
-        <td>{{ tag['name'] }}</td>
+      <p>{{ tag['name'] }}</p>
     {% endfor %}
-
-</table><br>
+<a href="{{ url_for("add_tag", question_id=question_id) }}">Add tags</a><br>
+<br>
 <a href="{{ url_for("edit_question", question_id=question_id) }}">Edit question</a><br>
         <a href="/question/{{ question_id }}/new_comment">Comment for question</a>
 <h3>Comments for question</h3>
