--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -63,9 +63,12 @@
 </table>
     <br>
     <p>Tags: </p>
+{% if question_tags %}
     {% for tag in question_tags %}
-      <p>{{ tag['name'] }}</p>
+      <tr>{{ tag['name'] }}</tr>
     {% endfor %}
+{% endif %}
+<br>
 <a href="{{ url_for("add_tag", question_id=question_id) }}">Add tags</a><br>
 <br>
 <a href="{{ url_for("edit_question", question_id=question_id) }}">Edit question</a><br>
