--- a/templates/answers.html
+++ b/templates/answers.html
@@ -52,7 +52,7 @@
     <th>Message</th>
     <th>Submission time</th>
 </tr>
-    {% for answer in answer: %}
+    {% for answer in answer %}
 
 <tr>
     <td>{{ answer['message'] }}</td>
@@ -66,7 +66,7 @@
         <th>Message</th>
         <th>Submission_time</th>
     </tr>
-        {% for comment in answer_comments: %}
+        {% for comment in answer_comments %}
     <tr>
         <td>{{ comment['message'] }}</td>
         <td>{{ comment['submission_time'] }}</td>
