--- a/templates/list.html
+++ b/templates/list.html
@@ -23,16 +23,15 @@
         background-size: cover;
         }
     </style>
-    <style type="text/css">
-        #element1 {display:inline-block; width:6%; padding:10px}
-        #element2 {display:inline-block; width:6%; padding:10px}
-        #element3 {display:inline-block; width:6%; padding:10px}
-</style>
     <style>
         body {
             background-color: #bbd1aa;
         }
+        #answer {
+            font-style: italic;
 
+
+        }
         h1 {
             color: #0d420c;
         }
@@ -91,6 +90,7 @@
         </th>
         <th>Image</th>
     </tr>
+
     {% for question in questions %}
         <tr>
             <td><a href="/question/{{ question['id'] }}">{{ question['id'] }}</a></td>
@@ -98,15 +98,35 @@
             <td>{{ question['view_number'] }}</td>
             <td>{{ question['vote_number'] }}</td>
             <td>{{ question['title'] }}</td>
+            {#if phrase in question #}
+            {# question.message.replace(phrase, tag)#}
             <td>{{ question['message'] }}</td>
+            {# endif #}
             <td><img src= {{ question['image'] }} alt="" onerror="this.style.display='none'"></td>
             <td><a href="/question/{{ question['id'] }}/vote_up">Vote up</a></td>
             <td><a href="/question/{{ question['id'] }}/vote_down">Vote down</a></td>
             <td><a href="/question/{{ question['id'] }}/delete">Trash this</a></td>
         </tr>
-    {% endfor %}
 
-</table>
+    {% endfor %}
+</table><br><br>
+    {% if answers %}
+    <table id="answer">
+        <tr>
+            <th>Question-id</th>
+            <th>Title</th>
+            <th colspan="7">Answer</th>
+        </tr>
+        {% for answer in answers %}
+        <tr >
+            <td>{{ answer['id'] }}</td>
+            <td>{{ answer['title'] }}</td>
+            <td style="word-break: break-word; white-space: pre-wrap" colspan="7">{{ answer['message'] }}</td>
+        </tr>
+    {% endfor %}
+        </table>
+    {% endif %}
+
 <br>
 <form method="GET" action="/search">
     <input name="phrase" id="phrase" type="text" placeholder="Looking for something?">
