--- a/templates/list.html
+++ b/templates/list.html
@@ -59,7 +59,12 @@
 <body>
 <h1>Askm8</h1><br>
 <p align="right"><a href="{{ url_for('askm8') }}">About this project</a></p>
-<p><a href="{{ url_for('login') }}">LOGIN</a></p>
+{% if "username" in session %}
+    <a href="{{ url_for('logout') }}">Log out</a><br>
+    <h3>Welcome {{ session["username"] }}</h3>
+{% else %}
+<p><a href="{{ url_for('login') }}">Login</a></p>
+{% endif %}
 
 <table>
     <tr>
