edit comment feature started

--- a/templates/display_a_question.html
+++ b/templates/display_a_question.html
@@ -85,6 +85,8 @@
         <td>{{ comment["submission_time"] }}</td>
         <td><a href="{{url_for("are_you_sure", comment=comment["message"],
          comment_id=comment["id"], question_id=question_id)}}" >
+         <td><a href="{{ url_for("edit_comment", comment_id=comment["id"]) }}">Edit comment</a> </td>
+
             <button type="button" >&#9851;</button></a></td>
 
     </tr>
