--- a/templates/login.html
+++ b/templates/login.html
@@ -47,6 +47,7 @@
         <input type="password" name="password"placeholder="Password">
         <input type="submit" name="login" value="login"><br><br>
     </form>
-<a href="/">Back to main page</a><br>
+<a href="/">Back to main page</a><br><br>
+<a href='/register'><button class="btn" type="button" name="" value="Sign Up">Sign Up</a>
 </body>
 </html>
