--- a/templates/list.html
+++ b/templates/list.html
@@ -103,8 +103,8 @@
             <td>{{ question['submission_time'] }}</td>
             <td>{{ question['view_number'] }}</td>
             <td>{{ question['vote_number'] }}</td>
+            <td>{{ question['title'] }}</td>
             <td>{{ question['message']|replace(phrase, tag) }}</td>
-            <td>{{ question['message'] }}</td>
             <td><img src= {{ question['image'] }} alt="" onerror="this.style.display='none'"></td>
             <td><a href="/question/{{ question['id'] }}/vote_up">Vote up</a></td>
             <td><a href="/question/{{ question['id'] }}/vote_down">Vote down</a></td>
