Implemented users list users

--- a/templates/list.html
+++ b/templates/list.html
@@ -59,7 +59,10 @@
 <h1>Askm8</h1><br>
 <p align="right"><a href="{{ url_for('askm8') }}">About this project</a></p>
 {% if "username" in session %}
-    <a href="{{ url_for('logout') }}">Log out</a><br>
+    <div>
+    <button type="button"><a href="{{ url_for('logout') }}">Log out</a></button>
+    <button type="button"><a href="{{ url_for('list_users') }}">Users</a></button>
+    </div>
     <h3>Welcome {{ session["username"] }}</h3>
 {% else %}
 <p><a href="{{ url_for('login') }}">Login</a></p>
