Finish edit comment feature

--- a/templates/answers.html
+++ b/templates/answers.html
@@ -65,11 +65,13 @@
     <tr>
         <th>Message</th>
         <th>Submission_time</th>
+        <th>Edited count</th>
     </tr>
         {% for comment in answer_comments %}
     <tr>
         <td>{{ comment['message'] }}</td>
         <td>{{ comment['submission_time'] }}</td>
+        <td>{{ comment['edited_count'] }}</td>
         <td><a href="{{url_for("are_you_sure", comment=comment["message"],
          comment_id=comment["id"], question_id=question_id)}}" >
         <button type="button" >&#9851;</button></a></td>
