--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>login</title>
-        <style>
+    <title>Delete question</title>
+    <style>
         body
         {
         background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
@@ -11,10 +11,6 @@
         }
     </style>
     <style>
-        body {
-            background-color: #bbd1aa;
-        }
-
         h1 {
             color: #0d420c;
         }
@@ -34,20 +30,29 @@
         tr:nth-child(even) {
             background-color: #328f6c;
         }
-
     </style>
 </head>
 <body>
-    <form action="/login" method="POST">
-        <h1> LOGIN </h1>
-          {% if error %}
-              <p><strong>Error:</strong> {{ error }}</p><br><br>
-            {% endif %}
-        <input type="username" name="username" placeholder="Email"><br><br>
-        <input type="password" name="password"placeholder="Password">
-        <input type="submit" name="login" value="login"><br><br>
-    </form>
-<a href="/">Back to main page</a><br><br>
-<a href='/register'><button class="btn" type="button" name="" value="Sign Up">Sign Up</a>
+<h1>Registered users:</h1>
+<table>
+    <tr>
+        <th>User name</th>
+        <th>Registration date</th>
+        <th>Count of asked questions</th>
+        <th>Count of answers</th>
+        <th>Count of comments</th>
+        <th>Reputation</th>
+    </tr>
+    <tr>
+        <td>{{ user['username'] }}</td>
+        <td>{{ user['registration_date'] }}</td>
+        <td>{{ user['count_of_asked_questions'] }}</td>
+        <td>{{ user['count_of_answers'] }}</td>
+        <td>{{ user['count_of_comments'] }}</td>
+        <td>{{ user['reputation'] }}</td>
+    </tr>
+
+</table><br><br>
+<button type="button"><a href="/">Back to main page</a></button>
 </body>
 </html>
