--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -53,8 +53,10 @@
         <td>{{ user['count_of_comments'] }}</td>
         <td>{{ user['reputation'] }}</td>
     </tr>
-
 </table><br><br>
+<table>
+
+</table>
 <button type="button"><a href="/">Back to main page</a></button>
 </body>
 </html>
