demo page, updated

--- a/templates/projectinfo.html
+++ b/templates/projectinfo.html
@@ -47,10 +47,10 @@
     .fold {
 	background: -webkit-linear-gradient(top, #4b674a, #1c2c1e);
 	padding: 10px;
-	width: 360px;
-	height: 400px;
+	width: 640px;
+	height: 700px;
 	color: white;
-    font: 12px Inconsolata, monospace;
+    font: 20px Inconsolata, monospace;
 	-webkit-transition: all 0.3s linear;
 	-moz-transition: all 0.3s linear;
 	transition: all 0.3s linear;
@@ -133,16 +133,15 @@
   <label for="toggle" class="toggle-label"><span class="unfold-icon">&#9654;</span><span class="fold-icon">&#9660;</span> Team-</label>
 
   <div class="fold">
-    <h2 align="left">Welcome! We are the Askm8 team</h2>
+    <h2 align="left">Welcome! We are the Askm8 Team</h2>
     <h2 align='right'>     Gabi, Konrád, Riki, Roland</h2>
       <p align="center">#     #     #</p>
      <p align="justify">
-          Our site represents the team's effort to make this
-          Codecool Journey project called "Askmate" possible.
-          A 'stackoverflow' like web application made with
+          Last week, we gladly presented our 'stackoverflow'
+          like web application made with
           Jinja, Flask, HTML5, CSS, PostgreSQL technologies
           to help users get their answers for their questions.</p>
-      <img src="https://media1.giphy.com/media/dwmNhd5H7YAz6/200w.webp?cid=ecf05e47dizc4k3fngpmhbk4bl28rmof3ipstnoixi2xrmz7&rid=200w.webp" align="center" alt="websurfer">
+      <img src="https://media3.giphy.com/media/CTX0ivSQbI78A/giphy.gif?cid=ecf05e470tvk39dk73nwhwhzbbvmc1ew1syafq67tfm55yjt&rid=giphy.gif" align="center" alt="websurfer">
    </div>
 </div>
 <div>
@@ -150,43 +149,34 @@
   <label for="toggle2" class="toggle-label"><span class="unfold-icon">&#9654;</span><span class="fold-icon">&#9660;</span> This project-</label>
 
   <div class="fold">
-    <h2 align="left">Our Sprint 2</h2>
+    <h2 align="left">Our Sprint 3</h2>
       <p align="center">#     #     #</p>
         <p align="justify">
-        This was however, not our first sprint, but <br>
-        our first sprint coordinated with agile tools. <br>
-
-        We used SCRUM during this project to get full <br>
-        advantage of it's project management aspect <br>
-        and make our precious time useful and our <br>
-        project well groomed.</p>
-      <img src="static/scrum.png" alt="psycopg2 error" height="300px">
+        This was our third sprint, where we used login <br>
+        structure and session data to make a more user<br>
+        friendly application <br>
+        We used SCRUM during this project  <br>
+        Also we worked in git branches. <br>
+      <img src="static/git.png" alt="psycopg2 error" height="300px">
    </div>
 </div>
 <div class="grid-container">
     <div class="grid-child toggletext">
         <div>
           <input type="checkbox" id="toggle3" class="unfolder"/>
-          <label for="toggle3" class="toggle-label"><span class="unfold-icon">&#9654;</span><span class="fold-icon">&#9660;</span> Learned on the field-</label>
+          <label for="toggle3" class="toggle-label"><span class="unfold-icon">&#9654;</span><span class="fold-icon">&#9660;</span> Learn, adapt, overcome-</label>
 
             <div class="fold">
-          <h2 align="left">We learned a <span class="bigger"><strong>LOT</strong></span><br>
-                                    And got a lot of errors along the way...</h2>
+          <h2 align="left">When we worked simultaneously, <br>
+              We tried to solve as many task as possible...</h2>
           <p align="center">#     #     #</p>
             <p align="justify">
-            Psycopg2 bombarded us with tons of messages about
-            the following timeless classics:
-                <ul>
-                    <li>-Key Errors</li>
-                    <li>-Programming Errors</li>
-                    <li>-Various Value Errors</li>
-                    <li>-ForeignKeyViolations (Roland's favourite)</li>
-                </ul>
-            We overcame these obstacles with teamwork,<br>
-            Massive amount of mentor help (thanks a lot! :) btw)<br>
-            Documentation diving, Stackoverflow <br>
-            And of course watching youtube channels from India.</p>
-            <img src="static/psycopg2error.png" alt="psycopg2 error" height="100px">
+            We learned to use advanced querys, git branches,<br>
+            cookie handling, altering table data and much more. <br>
+            We overcame the errors with teamwork, mentor help<br>
+            and reading of the official documentations.
+            </p>
+            <img src="static/query.png" alt="query">
             </div>
             </div>
         </div>
@@ -204,7 +194,7 @@
         <p align="justify">
         Thanks for stopping by! <br> We love to do demos for you!<br>
             Let's try <span class="bigger"><a href="/">Askm8</a></span>, our project.</p>
-      <img src="https://i.kym-cdn.com/photos/images/newsfeed/000/538/716/7f5.gif" alt="thumbs up gif" align="center" height="200">
+      <img src="https://media2.giphy.com/media/CzbiCJTYOzHTW/giphy.gif?cid=ecf05e47ixh2abitxtedpb6tlppsgqi2jcbcz7w3dqynduyl&rid=giphy.gif" alt="tom hanks computer gif" align="center" height="200">
    </div>
 </div>
 <a href="/">Back to main page</a><br>
