Add background and style in html files

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html lang='en'>
-
 <head>
-    <meta charset="UTF-8">
-    <title> Registration </title>
+  <meta charset="UTF-8">
+        <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
+    <style>
+        body {
+            background-color: #bbd1aa;
+        }
+
+        h1 {
+            color: #0d420c;
+        }
+
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #e0e2e1;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #328f6c;
+        }
+    </style>
 </head>
 <body>
     <h1>Register an account</h1>
