Add background and style in tag and registration HTML files

--- a/templates/new_tag.html
+++ b/templates/new_tag.html
@@ -2,7 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add Tags</title>
+    <title>New tags</title>
+    <style>
+        body
+        {
+        background-image:url('https://cdn.suwalls.com/wallpapers/anime/totoro-33207-2560x1440.jpg');
+        background-size: cover;
+        }
+    </style>
+    <style>
+        h1 {
+            color: #0d420c;
+        }
+
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td, th {
+            border: 1px solid #e0e2e1;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #328f6c;
+        }
+    </style>
 </head>
 <body>
 <h1>Write an answer m8</h1>
