Fix typo in new_tag.html

--- a/templates/new_tag.html
+++ b/templates/new_tag.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-<h1>Write an answer m8</h1>
+<h1>Add a new tag:</h1>
 <form method="POST" enctype="multipart/form-data">
     <input id="name" type="text" name="name" required placeholder="Give a tag" ><br><br>
     <button type="submit">Submit your Tag</button>
